# bricksbio-api

./: .gitignore  CITATION.cff  Cargo.toml  README.md
bench/: providers.sh  results.csv
bench/providers/: addgene.csv  dnasu.csv  ebi.csv  ensembl.csv  igem.csv  ncbi.csv  synbiohub.csv
docs/: biobrick.schema.json  index.html  openapi.yaml
src/: cache.rs  limit.rs  main.rs  merge.rs  ontology.rs  parser.rs  search.rs  semantic.rs  types.rs
src/exporters/: mod.rs  sbol.rs
src/parsers/: genbank.rs  mod.rs
src/providers/: addgene.rs  ensembl.rs  igem.rs  igem_parts.rs  igem_registry.rs  mod.rs  ncbi.rs  synbiohub.rs
