[package]
name = "bricks-bio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ureq = "2.9"
futures = "0.3"
scraper = "0.20"
chrono = "0.4.43"
async-trait = "0.1"
tower-http = { version = "0.6.8", features = ["fs"] }
